--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
-irrlotcode 2019-11/output/shapefiles/
+irrlotcode 2019-11/shapefiles
 shorelines 2020-03/shapefiles
 shorelines 2020-03/reference
 proxcode 2020-03/shapefiles
